# OneClick

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: youtube.rs
backend/src/services/: youtube_service.rs
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/Tiktok/: page.tsx
frontend/app/X/: page.tsx
frontend/app/Youtube/: page.tsx
frontend/component/: card.tsx
frontend/components/: BlurText.tsx  LightRays.tsx
