[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.11.0", features = ["v4"] }